--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "angel-backend",
+  "name": "angel-render-backend",
   "version": "1.0.0",
+  "description": "Angel One SmartAPI backend on Render",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "smartapi-javascript": "^1.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "smartapi-javascript-sdk": "1.0.3"
   }
 }
