--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "smartapi-javascript-sdk": "1.0.3"
+    "smartapi-javascript": "git+https://github.com/angel-one/smartapi-javascript.git"
   }
 }
